tests/netedit/basic/configs/netecfg/load/invalid/all_empty/output.netedit
TestFunctions: Netedit opened successfully
Finding reference
